# search

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  titles_100k.txt
include/: datasource.h  document.h  index.h  query.h  timer.h
src/: datasource.cpp  document.cpp  index.cpp  main.cpp  query.cpp  timer.cpp
